--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,8 @@ black = "^22.12.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
