--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,28 @@
 [tool.poetry]
 name = "osmose"
 version = "0.0.1"
-description = ""
-authors = []
+description = "Ocean acoustic studies toolkit."
+authors = ["Rumengol"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 soundfile = "^0.11.0"
 pandas = "^1.5.3"
 coverage = "^7.0.5"
+tqdm = "^4.64.1"
+tomlkit = "^0.11.6"
+matplotlib = "^3.7.0"
+tomli = "^2.0.1"
+numpy = "^1.24.2"
+sox = "^1.4.1"
+scipy = {version = "^1.10.1", python = ">=3.10,<3.12"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 black = "^22.12.0"
+pytest-cov = "^4.0.0"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
