--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ tomli = "^2.0.1"
 numpy = "^1.24.2"
 sox = "^1.4.1"
 scipy = {version = "^1.10.1", python = ">=3.10,<3.12"}
+termcolor = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
