--- a/src/OSmOSE/job_config.toml
+++ b/src/OSmOSE/job_config.toml
@@ -1,5 +1,6 @@
 job_scheduler = "Torque"
-env_script = "/appli/hibd/rdma-hadoop-2.x-1.3.5-x86/sbin/quick-hadoop-get-env.sh"
+# env_script should contain everything but the environment name, with ${env_name} being where it will go
+env_script = "/appli/anaconda/latest/etc/profile.d/conda.sh; conda activate /home/datawork-osmose/conda-env/${env_name}/"
 outfile = "Job_{}_%j.out"
 errfile = "Job_{}_%j.err"
 
