--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest = "^7.2.1"
 black = "^22.12.0"
 pytest-cov = "^4.0.0"
 jupyter = "^1.0.0"
+pre-commit = "^3.1.1"
 
 [build-system]
 requires = ["poetry-core"]
