--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Test package on Linux
 
 on: [push]
 
@@ -20,8 +20,6 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda create --name osmose python=3.10 -y
-        conda activate osmose
         conda install -c conda-forge poetry==1.3.2
         poetry install
     - name: Lint with flake8
