--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -30,6 +30,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Format with black
-      run: black src/OSmOSE
+      run: python -m black src/OSmOSE
     - name: Test with pytest
       run: pytest
