--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -34,4 +34,6 @@ jobs:
         conda install black
         python -m black src/OSmOSE
     - name: Test with pytest
-      run: pytest
+      run: |
+        conda install pytest
+        pytest
