--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -1,4 +1,4 @@
-name: Test package on Linux
+name: Test package
 
 on: [push]
 
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         conda install -c conda-forge poetry==1.3.2
-        poetry install
+        poetry install --no-interaction
     - name: Lint with flake8
       run: |
         conda install flake8
@@ -32,8 +32,8 @@ jobs:
     - name: Format with black
       run: |
         conda install black
-        python -m black src/OSmOSE
+        poetry run black src/OSmOSE
     - name: Test with pytest
       run: |
         conda install pytest
-        pytest
+        poetry run pytest
