--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -31,6 +31,11 @@ jobs:
     #----------------------------------------------
     # install dependencies if cache does not exist
     #----------------------------------------------
+    - name: Install APT dependencies
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get install libsndfile1
+        sudo apt-get install sox
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install --no-interaction --no-root
