--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Install APT dependencies
       if: runner.os == 'Linux'
       run: |
+        sudo apt update
         sudo apt-get install libsndfile1
         sudo apt-get install sox
     - name: Install dependencies
