--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -36,7 +36,8 @@ jobs:
       run: |
         sudo apt update
         sudo apt-get install libsndfile1
-        sudo apt-get install sox
+        sudo apt-get install sox libsox-fmt-all 
+        sudo apt-get install sox libsox-dev 
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install --no-interaction --no-root
