--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -1,6 +1,10 @@
 name: Test package
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-linux:
@@ -12,25 +16,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
+    - name: Set up poetry cache
+      uses: actions/cache@v2
       with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-        installer-parallel: true
-
-      #----------------------------------------------
-      #       load cached venv if cache exists
-      #----------------------------------------------
-    - name: Load cached venv
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-    #----------------------------------------------
-    # install dependencies if cache does not exist
-    #----------------------------------------------
+        path: ~/.cache/pypoetry/
+        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install
     - name: Install APT dependencies
       if: runner.os == 'Linux'
       run: |
@@ -38,23 +35,13 @@ jobs:
         sudo apt-get install libsndfile1
         sudo apt-get install sox libsox-fmt-all 
         sudo apt-get install sox libsox-dev 
-    - name: Install dependencies
-      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction --no-root
-    #----------------------------------------------
-    # install your root project, if required
-    #----------------------------------------------
-    - name: Install project
-      run: poetry install --no-interaction
-    #----------------------------------------------
-    #              run test suite
-    #----------------------------------------------
     - name: Run tests
       run: |
-        source .venv/bin/activate
-        pytest tests/
-        coverage report
+        poetry run pytest
+    - name: Run coverage
+      run: |
+        poetry run coverage run pytest
+        poetry run coverage report
     - name: Format with black
       run: |
-        source .venv/bin/activate
-        black .
+        poetry run black .
