--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: '3.10.9'
     - name: Set up poetry cache
       uses: actions/cache@v2
       with:
@@ -33,8 +33,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1
-        sudo apt-get install sox libsox-fmt-all 
-        sudo apt-get install sox libsox-dev 
+        sudo apt-get install sox
     - name: Run tests
       run: |
         poetry run pytest
