--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -40,3 +40,42 @@ jobs:
     - name: Format with black
       run: |
         poetry run black .
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.10.9'
+    - name: Set up poetry cache
+      uses: actions/cache@v3
+      with:
+        enableCrossOsArchive: true
+        path: ~/.cache/pypoetry/
+        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-poetry-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install
+    - name: Install APT dependencies
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install libsndfile1
+        sudo apt-get install sox
+    - name: Run tests
+      run: |
+        poetry run pytest -v
+    - name: Run coverage
+      run: |
+        poetry run coverage run pytest
+        poetry run coverage report
+    - name: Format with black
+      run: |
+        poetry run black .
