--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -32,10 +32,10 @@ jobs:
         sudo apt-get install sox
     - name: Run tests
       run: |
-        poetry run pytest
+        poetry run pytest -v
     - name: Run coverage
       run: |
-        poetry run coverage run pytest
+        poetry run coverage run -m pytest
         poetry run coverage report
     - name: Format with black
       run: |
