--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "osmose"
-version = "0.1.1a"
+version = "0.1.2"
 description = "Ocean acoustic studies toolkit."
 authors = ["Rumengol"]
 readme = "README.md"
