--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ scipy = {version = "^1.10.1", python = ">=3.10,<3.12"}
 termcolor = "^2.2.0"
 filelock = "^3.10.2"
 seaborn = "^0.12.2"
+netcdf4 = "^1.6.4"
+pykdtree = "^1.3.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
