--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ filelock = "^3.10.2"
 seaborn = "^0.12.2"
 netcdf4 = "^1.6.4"
 pykdtree = "^1.3.9"
+cdsapi = "^0.6.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
