--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-soundfile = "^0.11.0"
+soundfile = "0.12.1"
 pandas = "^1.5.3"
 coverage = "^7.0.5"
 tqdm = "^4.64.1"
@@ -25,6 +25,7 @@ seaborn = "^0.12.2"
 netcdf4 = "^1.6.4"
 pykdtree = "^1.3.9"
 cdsapi = "^0.6.1"
+librosa = "^0.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
