make documentation build at push

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,9 +1,6 @@
 name: documentation
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+on: [ push, pull_request ]
 
 permissions:
   contents: read
