--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme sphinx_gallery sphinx_copybutton myst_parser
+          pip install sphinx sphinx_rtd_theme sphinx_copybutton myst_parser
       - name: Sphinx build
         run: |
           sphinx-build docs _site
