--- a/.github/workflows/github_ci.yml
+++ b/.github/workflows/github_ci.yml
@@ -29,7 +29,13 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install libsndfile1
-        sudo apt-get install sox
+        sudo apt-get install sox        
+    - name: Install dependencies for documentation
+      run: |
+        poetry add sphinx sphinx_rtd_theme sphinx_copybutton myst_parser
+    - name: Sphinx build
+      run: |
+        poetry run sphinx-build docs _site
     - name: Run tests
       run: |
         poetry run pytest -v
