--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,30 +16,33 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: '3.10.9'
+
     - name: Set up poetry cache
       uses: actions/cache@v2
       with:
         path: ~/.cache/pypoetry/
-        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+        key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock', 'pyproject.toml') }}
         restore-keys: |
           ${{ runner.os }}-poetry-
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         poetry install      
-    - name: Install dependencies for documentation
-      run: |
-        poetry add sphinx sphinx_rtd_theme sphinx_copybutton myst_parser
+
     - name: Sphinx build
       run: |
         poetry run sphinx-build docs _site
+
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v2
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
