--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-soundfile = "0.12.1"
-pandas = "^1.5.3"
+sphinx = ">=7.0.0,<8.0.0"
+sphinx-rtd-theme = "^2.0.0"
+sphinx-copybutton = "^0.5.2"
+myst-parser = "^4.0.0"
+soundfile = "^0.12.1"
+pandas = "^2.2.2"
 coverage = "^7.0.5"
 tqdm = "^4.64.1"
 tomlkit = "^0.11.6"
@@ -24,7 +28,7 @@ filelock = "^3.10.2"
 seaborn = "^0.12.2"
 netcdf4 = "^1.6.4"
 pykdtree = "^1.3.9"
-cdsapi = "^0.6.1"
+cdsapi = "^0.7.2"
 librosa = "^0.10.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -41,8 +45,13 @@ build-backend = "poetry.core.masonry.api"
 addopts = [
     "--import-mode=importlib",
 ]
+filterwarnings = [
+    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
+    "ignore:pkg_resources.declare_namespace('sphinxcontrib'):DeprecationWarning",
+]
 markers = [
     "unit: Mark test as unitary test. Run only these with '-m unit'.",
     "integ: Mark test as integration test. Run only these with '-m integ'.",
     "reg: Mark test as regression test. Run only these with '-m ref'."
 ]
+
