189 new reshape function (#190)
* initial-commit

in order to keep track of progress
not ready yet

* temporary-commit2

* maj 20-08-2024

v0 looks like it's working well locally and and datarmor
need to add few warnings concerning the chosed datetimes

* Delete audio_reshaper_old.py

* maj 21-08

test integration / update and black formatting

* documentation_workflow_update

* Update poetry.lock

* audio_reshaper revision v0

added comments to reshape function

* update reshape - non mandatory datetimes arguments

made the datetime begin and end not mandatory

* reshape - minor corrections

* reshape - minor corrections

* audio reshaper v0.1

Datarmor bug correction

* update read_header

* reshaper v0.2

Faster reshape function

* update gitignore

* Update Spectrogram.py

* minor changes

* metadata audio_file_count correction

modified the way metadata.csv audio_file_count is processed

* unit test warnings fix

* update soundscape functions

* added 'concat' parameter

new functionnality: it is possible not to concatenate the audio segments according to @gmanatole 's wish, intead they will be 0-padded to fit the desired duration if necessary

* 'concat' parameter fix datarmor

* 'concat' parameter update

made 'concat' an attribute of Spectrogram instance

* update add_entry_for_APLOSE

to match the new columns formatting of dataset.csv following APLOSE update

* added docstring to audio_reshaper

* added docstring to audio_reshaper

* duty cyle handling + zero-padded gaps

-added zero-padding for gaps in between 2 consecutives original audio files
-adapted code to handle data with a duty cycle

* reshaper v0.3

* reshaper v0.3.1

Simpler and more efficient version thanks to @gmanatole 's help!

* v0.3.1 minor fixes

* trigger parameter

added a trigger parameter to reshape function
update on job ids update too

* bug fix

when ratio of sample rates is not an integ

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+__pycache__/
 .pytest-cache
-__pycache__
+.coverage
+/_site
 *.git
 dist
 .vscode
 ongoing_jobs
 log_job
-.coverage
-/_site
+archive/
+.github
+.spyproject
