--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,13 @@ build-backend = "poetry.core.masonry.api"
 addopts = [
     "--import-mode=importlib",
 ]
+filterwarnings = [
+    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
+    "ignore:pkg_resources.declare_namespace('sphinxcontrib'):DeprecationWarning",
+]
 markers = [
     "unit: Mark test as unitary test. Run only these with '-m unit'.",
     "integ: Mark test as integration test. Run only these with '-m integ'.",
     "reg: Mark test as regression test. Run only these with '-m ref'."
 ]
+
