--- a/src/OSmOSE/logging_conf.yaml
+++ b/src/OSmOSE/logging_conf.yaml
@@ -3,27 +3,28 @@ version: 1
 loggers:
   dataset:
     level: DEBUG
-    handlers: [consoleHandler]
+    handlers: [consoleHandler, globalFileHandler]
+    propagate: no
 
 handlers:
   consoleHandler:
     class: logging.StreamHandler
-    level: WARNING
-    formatter: warningFormatter
+    level: INFO
+    formatter: consoleFormatter
     stream: ext://sys.stdout
 
   globalFileHandler:
     class: logging.FileHandler
     level: DEBUG
-    formatter: standardFormatter
+    formatter: fileFormatter
     filename: "logs.log"
     mode: "w"
 
 formatters:
-  standardFormatter:
-    format: "%(asctime)s - %(levelname)s - %(message)s"
-  warningFormatter:
-    format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  fileFormatter:
+    format: "\t%(asctime)s - %(name)s - %(levelname)s\n%(message)s\n"
+  consoleFormatter:
+    format: "\t%(asctime)s\n%(message)s\n"
 
 root:
   level: DEBUG
