--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest = "^7.2.1"
 black = "^24.4.2"
 pytest-cov = "^4.0.0"
 jupyter = "^1.0.0"
+ruff = "^0.7.1"
 
 [build-system]
 requires = ["poetry-core"]
