Refactor log system (#220)
* add LoggingContext class

* import logging configuration file in package __init__

* create Dataset logger in __init__

* replace prints with logs

* mock file handlers during tests

* replace prints with logs in Spectrogram class

* use logging_config file from cwd if it exists (overwrites the default config file)

* add tests for the logging feature

* add test for set_logger context manager

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ filterwarnings = [
 markers = [
     "unit: Mark test as unitary test. Run only these with '-m unit'.",
     "integ: Mark test as integration test. Run only these with '-m integ'.",
-    "reg: Mark test as regression test. Run only these with '-m ref'."
+    "reg: Mark test as regression test. Run only these with '-m ref'.",
+    "allow_log_write_to_file: Disables the automatic patch_filehandlers fixture that prevents logging handlers to write into files."
 ]
 
 [tool.ruff]
