--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,4 +65,7 @@ select = ["ALL"]
 "tests/**/*.py" = [
     # at least this three should be fine in tests:
     "S101", # asserts allowed in tests...
+    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
+    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
+    "D", # Docstring-related stuff
 ]
