add chmod_if_needed tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,4 +68,5 @@ select = ["ALL"]
     "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
     "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
     "D", # Docstring-related stuff
+    "SLF001", # Access to private variables
 ]
