--- a/src/OSmOSE/logging_config.yaml
+++ b/src/OSmOSE/logging_config.yaml
@@ -5,6 +5,10 @@ loggers:
     level: DEBUG
     handlers: [consoleHandler, globalFileHandler]
     propagate: no
+  printer:
+    level: INFO
+    handlers: [consoleHandler]
+    propagate: no
 
 handlers:
   consoleHandler:
