--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -32,7 +32,7 @@ jobs:
       run: uv sync --locked --all-extras --dev
 
     - name: Sphinx build
-      run: uv run sphinx-build docs _site
+      run: uv run sphinx-build docs/source _site
 
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v3
