--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-linux:
+  build-documentation:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +32,7 @@ jobs:
       run: uv sync --locked --all-extras --dev
 
     - name: Sphinx build
-      run: uv run sphinx-build docs _site
+      run: uv run sphinx-build docs/source _site
 
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v3
