--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,17 +36,23 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    
     needs: build
+    
     permissions:
       id-token: write
       contents: read
+      
     environment:
       name: pypi
       url: https://pypi.org/project/osekit/
+      
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Retrieve release distributions
+        uses: actions/download-artifact@v4
         with:
           name: dist
-          path: dist
+          path: dist/
+          
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
