--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = [
     "sphinx>=8.2.3",
     "sphinx-book-theme>=1.1.4",
     "sphinx-copybutton>=0.5.2",
+    "twine>=6.1.0",
 ]
 
 [tool.ruff]
