--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "coverage>=7.8.2",
+    "coveralls>=4.0.1",
     "myst-nb>=1.3.0",
     "myst-parser>=4.0.1",
     "pre-commit>=4.2.0",
