--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "osekit"
-version = "0.3.0"
+version = "0.3.1"
 description = "OSEkit"
 readme = "README.md"
 authors = [
@@ -20,6 +20,11 @@ dependencies = [
     "tomlkit>=0.13.2",
     "tqdm>=4.67.1",
 ]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+]
 
 [project.scripts]
 OSEkit = "OSmOSE:main"
@@ -31,6 +36,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "coverage>=7.8.2",
+    "coveralls>=4.0.1",
     "myst-nb>=1.3.0",
     "myst-parser>=4.0.1",
     "pre-commit>=4.2.0",
