add obspy to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.10.3",
     "notebook>=7.4.4",
     "numpy>=2.2.6",
+    "obspy>=1.4.2",
     "pandas>=2.2.3",
     "pytest>=8.3.5",
     "pyyaml>=6.0.2",
