MSEED files support (#283)
* add obspy to dependencies

* read mseed metadata in AudioFile

* add tests for mseed file

* refactor audiofilemanager to isolate MSEED support

* update lock

* add MSEED install in doc

* add .mseed to supported AudioFile extensions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ classifiers = [
 [project.scripts]
 OSEkit = "OSmOSE:main"
 
+[project.optional-dependencies]
+mseed = [
+    "obspy",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
