--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ dependencies = [
     "numpy>=2.2.6",
     "pandas>=2.2.3",
     "pytest>=8.3.5",
+    "pytz>=2025.2",
     "pyyaml>=6.0.2",
     "scipy>=1.15.3",
     "soundfile>=0.13.1",
     "soxr>=0.5.0.post1",
-    "tomlkit>=0.13.2",
     "tqdm>=4.67.1",
 ]
 classifiers = [
